# Search_engine

./: CMakeLists.txt  README.md  config.ini  stopwords.txt
html/: search_form.html  search_results.html  style.css
include/: config.hpp  crawler.hpp  database.hpp  indexer.hpp  logger.hpp  search_server.hpp  utils.hpp
src/: main.cpp
src/config/: config.cpp
src/crawler/: crawler.cpp
src/database/: database.cpp
src/indexer/: indexer.cpp
src/logger/: logger.cpp
src/search/: search_server.cpp
src/utils/: utils.cpp
